fix z-index modal

--- a/src/widgets/post/ui/AddPostModule.module.scss
+++ b/src/widgets/post/ui/AddPostModule.module.scss
@@ -4,7 +4,7 @@
   width: max-content;
   min-width: size(492px);
   max-width: size(972px);
-  z-index: 0;
+  z-index: 2;
 
   & > div:nth-child(2) {
     padding: 0;
